--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/timezoneText"
+            android:id="@+id/timezoneView"
             android:hint="薬を飲む時間帯は？" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="53dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:textSize="24sp"/>
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/drinktimeText" android:hint="薬を飲む時間は？"
-            android:textSize="24sp" app:layout_constraintStart_toStartOf="@+id/timezoneText"
+            android:textSize="24sp" app:layout_constraintStart_toStartOf="@+id/timezoneView"
             android:layout_marginTop="72dp"
-            app:layout_constraintTop_toBottomOf="@+id/timezoneText"/>
+            app:layout_constraintTop_toBottomOf="@+id/timezoneView"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
